--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,8 @@
   {% block title %}Enseigner l'arabe aux enfants français{% endblock %}
   </title>
   {% block stylesheets %}
-  <link rel="stylesheet" href="{{ asset('assets/CSS/style.css') }}">
+            {{ encore_entry_link_tags('app') }}
+  <link rel="stylesheet" href="{{ asset('assets/CSS/style1.scss') }}">
     {# <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css"> #}
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"> 
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous"> 
